force-app/main/default/objects/Account/fields/Activation__c.field-meta.xml
<CustomField>
    <fullName>Activation__c</fullName>
    <label>Activation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>