force-app/main/default/objects/Account/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Don</relationshipName>
    <type>Lookup</type>
</CustomField>