force-app/main/default/objects/Account/fields/Github_Username__c.field-meta.xml
<CustomField>
    <fullName>Github_Username__c</fullName>
    <label>Github Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>