force-app/main/default/objects/Account/fields/Is_Tech__c.field-meta.xml
<CustomField>
    <fullName>Is_Tech__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Tech</label>
    <type>Checkbox</type>
</CustomField>