force-app/main/default/objects/Account/fields/Number_Of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Contact__c</fullName>
    <label>Number Of Contact</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>