force-app/main/default/objects/Account/fields/Shipping_city_Weather__c.field-meta.xml
<CustomField>
    <fullName>Shipping_city_Weather__c</fullName>
    <label>Shipping city Weather</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>