force-app/main/default/objects/Account/validationRules/ph_no_mandate.validationRule-meta.xml
<ValidationRule>
    <fullName>ph_no_mandate</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Phone  )</errorConditionFormula>
    <errorMessage>put phone no</errorMessage>
</ValidationRule>