force-app/main/default/objects/Account/validationRules/tryVR.validationRule-meta.xml
<ValidationRule>
    <fullName>tryVR</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(Name, &apos;su&apos;)</errorConditionFormula>
    <errorMessage>su .....</errorMessage>
</ValidationRule>